--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 html, body {
   margin: 0;
   padding: 0;
-font-family: "Inter", "Segoe UI", Arial, sans-serif;
-  background: linear-gradient(135deg, #f5f7fa, #e4ecf7);
-  color: #1a1a1a;
+  font-family: "Inter", "Segoe UI", Arial, sans-serif;
+  background: linear-gradient(135deg, #0f172a, #1e293b);
+  color: #e2e8f0;
   overflow-x: hidden;
 }
 
@@ -34,7 +34,7 @@ font-family: "Inter", "Segoe UI", Arial, sans-serif;
   text-align: center;
   margin-bottom: 35px;
   letter-spacing: -0.5px;
-  color: #1f2937;
+  color: #f1f5f9;
 }
 .date-text {
   font-weight: 500;
@@ -75,16 +75,17 @@ font-family: "Inter", "Segoe UI", Arial, sans-serif;
   padding: 12px 16px;
   font-size: 14px;
   border-radius: 10px;
-  border: 1px solid #d1d5db;
-  background: #ffffff;
+  border: 1px solid #334155;
+  background: #1e293b;
+  color: #e2e8f0;
   transition: all 0.2s ease;
 }
 
 .filters-container input:focus,
 .filters-container select:focus {
   outline: none;
-  border-color: #2563eb;
-  box-shadow: 0 0 0 3px rgba(37, 99, 235, 0.15);
+  border-color: #22d3ee;
+  box-shadow: 0 0 0 3px rgba(34, 211, 238, 0.2);
 }
 
 .controls-row {
@@ -95,16 +96,16 @@ font-family: "Inter", "Segoe UI", Arial, sans-serif;
 
 /*  CARD COMPONENT  */
 .card {
-  background: white;
+  background: #1e293b;
   border-radius: 14px;
   padding: 22px;
-  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 8px 25px rgba(0, 0, 0, 0.4);
   transition: all 0.25s ease;
 }
 
 .card:hover {
   transform: translateY(-4px);
-  box-shadow: 0 12px 28px rgba(0, 0, 0, 0.08);
+  box-shadow: 0 10px 35px rgba(34, 211, 238, 0.15);
 }
 
 /*  KPI CARDS */
@@ -150,7 +151,7 @@ font-family: "Inter", "Segoe UI", Arial, sans-serif;
 
 .kpi-icon {
   font-size: 22px;
-  background: #eff6ff;
+  background: #0f172a;
   padding: 8px;
   border-radius: 10px;
 }
@@ -158,7 +159,7 @@ font-family: "Inter", "Segoe UI", Arial, sans-serif;
 .kpi-label {
   font-size: 14px;
   font-weight: 600;
-  color: #6b7280;
+  color: #94a3b8;
   text-transform: uppercase;
   letter-spacing: 0.8px;
 }
@@ -166,13 +167,13 @@ font-family: "Inter", "Segoe UI", Arial, sans-serif;
 .kpi-value {
   font-size: 34px;
   font-weight: 700;
-  color: #111827;
+  color: #22d3ee;
   margin-bottom: 6px;
 }
 
 .kpi-sub {
   font-size: 13px;
-  color: #9ca3af;
+  color: #94a3b8;
 }
 
 .kpi-card:hover {
@@ -180,20 +181,31 @@ font-family: "Inter", "Segoe UI", Arial, sans-serif;
   box-shadow: 0 14px 32px rgba(0, 0, 0, 0.08);
 }
 
+.kpi-compare {
+  font-size: 14px;
+  margin-top: 6px;
+  font-weight: 500;
+}
+
+.kpi-up {
+  color: #16a34a;
+}
+
+.kpi-down {
+  color: #dc2626;
+}
 
 /*  TREND CHART  */
 #trend-chart-container {
-  background: white;
+  background: #1e293b;
   border-radius: 14px;
   padding: 25px;
   margin-bottom: 35px;
-  box-shadow: 0 8px 20px rgba(0,0,0,0.05);
+  box-shadow: 0 8px 25px rgba(0,0,0,0.4);
 }
 
 #trend-chart-container h3 {
-  margin-top: 0;
-  margin-bottom: 15px;
-  color: #1f2937;
+  color: #f1f5f9;
 }
 
 canvas {
@@ -212,10 +224,10 @@ table {
   width: 100%;
   border-collapse: collapse;
   min-width: 750px;
-  background: white;
+  background: #1e293b;
   border-radius: 14px;
   overflow: hidden;
-  box-shadow: 0 8px 20px rgba(0,0,0,0.05);
+  box-shadow: 0 8px 25px rgba(0,0,0,0.4);
 }
 
 /* Underperforming highlight */
@@ -243,7 +255,7 @@ th, td {
 }
 
 th {
-  background: #2563eb;
+  background: linear-gradient(90deg, #0ea5e9, #6366f1);
   color: white;
   font-weight: 600;
   font-size: 13px;
@@ -253,8 +265,9 @@ th {
 
 
 td {
-  border-bottom: 1px solid #e5e7eb;
+  border-bottom: 1px solid #334155;
   font-size: 14px;
+  color: #e2e8f0;
 }
 
 /* Center numeric columns only */
@@ -280,7 +293,7 @@ tbody tr {
 }
 
 tbody tr:hover {
-  border-left: 4px solid #2563eb;
+  border-left: 4px solid #22d3ee;
 }
 
 
@@ -298,10 +311,10 @@ tr.selected-row {
 
 /* DRILLDOWN  */
 #drilldown {
-  background: white;
+  background: #1e293b;
   border-radius: 14px;
   padding: 25px;
-  box-shadow: 0 8px 20px rgba(0,0,0,0.05);
+  box-shadow: 0 8px 25px rgba(0,0,0,0.4);
   margin-bottom: 50px;
 }
 
@@ -390,6 +403,7 @@ Campaign Pulse
     </div>
     <div class="kpi-value" id="kpi-opens">-</div>
     <div class="kpi-sub">Total email opens in selected range</div>
+<div class="kpi-compare" id="kpi-opens-compare"></div>
   </div>
 
   <div class="card kpi-card">
@@ -399,6 +413,7 @@ Campaign Pulse
     </div>
     <div class="kpi-value" id="kpi-clicks">-</div>
     <div class="kpi-sub">Total user click interactions</div>
+    <div class="kpi-compare" id="kpi-clicks-compare"></div>
   </div>
 
   <div class="card kpi-card">
@@ -408,6 +423,7 @@ Campaign Pulse
     </div>
     <div class="kpi-value" id="kpi-purchases">-</div>
     <div class="kpi-sub">Total completed purchases</div>
+    <div class="kpi-compare" id="kpi-purchases-compare"></div>
   </div>
 
 </div>
